objects/Collab_Migrated_Group_Products__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Period__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Period</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collab_Migrated_Group__c</fullName>
        <description>It is the Group(Account) associated with the Group Products</description>
        <inlineHelpText>It defines the Group(Account) associated with the Group(Account) Products</inlineHelpText>
        <label>Collab Migrated Group</label>
        <referenceTo>Collab_Migrated_Group__c</referenceTo>
        <relationshipLabel>Collab_Migrated_Group_Products</relationshipLabel>
        <relationshipName>Collab_Migrated_Group_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Size</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPCC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HPCC Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Incentive Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Collab Migrated Group Products</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Collab Migrated Group Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collab_Migrated_Group_Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>